# smart-tts

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  agents.md  example.py  example_async.py  example_pydantic_ai.py  pyproject.toml  spec.md
.github/workflows/: ci.yml  publish.yml
elevenlabs_smart_tts/: __init__.py  async_tts.py  config.py  exceptions.py  models.py  tts.py
elevenlabs_smart_tts/client/: elevenlabs.py  openrouter.py  retry.py
elevenlabs_smart_tts/enhancement/: enhancer.py  normalizer.py
elevenlabs_smart_tts/enhancement/prompts/: __init__.py  base.py  v2.py  v3.py
elevenlabs_smart_tts/voices/: cache.py  manager.py  selector.py
smart_tts/: __init__.py  async_tts.py  config.py  exceptions.py  models.py  telemetry.py  templates.py  text.py  tts.py
smart_tts/audio/: __init__.py  mixer.py  probe.py
smart_tts/client/: elevenlabs.py  fish.py
smart_tts/extensions/: __init__.py  otel.py  pydantic_ai.py
smart_tts/script/: __init__.py  breaks.py
smart_tts/templates/: __init__.py  _core.py  registry.py
smart_tts/voices/: __init__.py  registry.py
templates/: investigation.json
tests/: conftest.py  test_async_smart_tts.py  test_breaks.py  test_cache.py  test_clients.py  test_config.py  test_elevenlabs_client.py  test_enhancer.py  test_fish_client.py  test_normalizer.py  test_otel_extension.py  test_pydantic_ai_extension.py  test_smart_tts.py  test_telemetry.py  test_template_registry.py  test_templates.py  test_voice_manager.py  test_voice_selector.py
