[project]
name = "elevenlabs-smart-tts"
version = "0.1.0"
description = "Smart TTS library with ElevenLabs and OpenRouter text enhancement"
readme = "spec.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "diskcache>=5.6",
    "inflect>=7.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["elevenlabs_smart_tts"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
