[project]
name = "elevenlabs-smart-tts"
dynamic = ["version"]
description = "Smart TTS library with ElevenLabs and OpenRouter text enhancement"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "vpuhoff" }]
keywords = ["elevenlabs", "tts", "text-to-speech", "openrouter", "smart-tts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "diskcache>=5.6",
    "inflect>=7.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/vpuhoff/elevenlabs-smart-tts"
Repository = "https://github.com/vpuhoff/elevenlabs-smart-tts"
Issues = "https://github.com/vpuhoff/elevenlabs-smart-tts/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "elevenlabs_smart_tts/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["elevenlabs_smart_tts"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
