[project]
name = "smart-tts"
dynamic = ["version"]
description = "Smart TTS: Fish Audio speech, ElevenLabs music/ambient, ffmpeg mixing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "vpuhoff" }]
keywords = ["fish-audio", "elevenlabs", "tts", "text-to-speech", "smart-tts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "elevenlabs>=2.0",
    "httpx>=0.27",
    "diskcache>=5.6",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/vpuhoff/smart-tts"
Repository = "https://github.com/vpuhoff/smart-tts"
Issues = "https://github.com/vpuhoff/smart-tts/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "pydantic-ai>=0.2",
]
pydantic-ai = [
    "pydantic-ai>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "pydantic-ai>=0.2",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "smart_tts/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["smart_tts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
